--- a/BinarySearch/033.search-in-rotated-sorted-array.md
+++ b/BinarySearch/033.search-in-rotated-sorted-array.md
@@ -1,3 +1,57 @@
+# 搜索旋转排序数组（Search in Rotated Sorted Array）Medium
+## 描述
+假设按照升序排序的数组在预先未知的某个点上进行了旋转。
+
+( 例如，数组[0,1,2,4,5,6,7]可能变为[4,5,6,7,0,1,2])。
+
+搜索一个给定的目标值，如果数组中存在这个目标值，则返回它的索引，否则返回-1。
+
+你可以假设数组中不存在重复的元素。
+
+你的算法时间复杂度必须是O(logn) 级别。
+
+**示例 1:**
+```
+输入: nums = [4,5,6,7,0,1,2], target = 0
+
+输出: 4
+```
+
+**示例2:**
+```
+输入: nums = [4,5,6,7,0,1,2], target = 3
+
+输出: -1
+```
+
+## Description
+Suppose an array sorted in ascending order is rotated at some pivot unknown to you beforehand.
+
+(i.e., [0,1,2,4,5,6,7] might become [4,5,6,7,0,1,2]).
+
+You are given a target value to search. If found in the array return its index, otherwise return -1.
+
+You may assume no duplicate exists in the array.
+
+Your algorithm&#39;s runtime complexity must be in the order ofO(logn).
+
+**Example 1:**
+```
+Input: nums = [4,5,6,7,0,1,2], target = 0
+
+Output: 4
+```
+
+
+**Example 2:**
+```
+Input: nums = [4,5,6,7,0,1,2], target = 3
+
+Output: -1
+```
+
+
+
 ## 旋转数组查找
 ### 判断左右两段状态以及target与mid的关系, 共四种情况:
 - 左边升序, 落在左边
