--- a/HashTable/347.top-k-frequent-elements.md
+++ b/HashTable/347.top-k-frequent-elements.md
@@ -1,3 +1,57 @@
+# 前K个高频元素（Top K Frequent Elements）Medium
+## 描述
+给定一个非空的整数数组，返回其中出现频率前k高的元素。
+
+**示例 1:**
+```
+输入: nums = [1,1,1,2,2,3], k = 2
+
+输出: [1,2]
+```
+
+
+**示例 2:**
+```
+输入: nums = [1], k = 1
+
+输出: [1]
+```
+
+说明：
+
+
+    你可以假设给定的k总是合理的，且 1 &le; k &le; 数组中不相同的元素的个数。
+    你的算法的时间复杂度必须优于 O(n log n) ,n是数组的大小。
+
+## Description
+Given a non-empty array of integers, return the k most frequent elements.
+
+**Example 1:**
+```
+Input: nums = [1,1,1,2,2,3], k = 2
+
+Output: [1,2]
+```
+
+
+
+**Example 2:**
+```
+Input: nums = [1], k = 1
+
+Output: [1]
+```
+**Note:**
+ 
+
+
+    You may assume k is always valid, 1 &le; k &le; number of unique elements.
+    Your algorithm&#39;s time complexity must be better than O(n log n), where n is the array&#39;s size.
+
+
+
+
+
 ## 找出现次数最多的k个数
 
 ### 解法:
