--- a/HashTable/525.contiguous-array.md
+++ b/HashTable/525.contiguous-array.md
@@ -1,3 +1,54 @@
+# 连续数组（Contiguous Array）Medium
+## 描述
+给定一个二进制数组, 找到含有相同数量的 0 和 1 的最长连续子数组。
+
+**示例 1:**
+```
+输入: [0,1]
+
+输出: 2
+说明: [0, 1] 是具有相同数量0和1的最长连续子数组。
+```
+
+**示例 2:**
+```
+输入: [0,1,0]
+
+输出: 2
+说明: [0, 1] (或 [1, 0]) 是具有相同数量0和1的最长连续子数组。
+
+注意:给定的二进制数组的长度不会超过50000。
+```
+
+## Description
+Given a binary array, find the maximum length of a contiguous subarray with equal number of 0 and 1. 
+
+
+**Example 1:**
+```
+Input: [0,1]
+
+Output: 2
+
+Explanation: [0, 1] is the longest contiguous subarray with equal number of 0 and 1.
+```
+
+
+
+**Example 2:**
+```
+Input: [0,1,0]
+
+Output: 2
+
+Explanation: [0, 1] (or [1, 0]) is a longest contiguous subarray with equal number of 0 and 1.
+```
+**Note:**
+
+The length of the given binary array will not exceed 50,000.
+
+
+
 ## binary数组中0和1数量相等的最长连续子序列.
 
 ### 解法
