--- a/String/43.multiply-strings.md
+++ b/String/43.multiply-strings.md
@@ -1,3 +1,54 @@
+# 字符串相乘（Multiply Strings）Medium
+## 描述
+给定两个以字符串形式表示的非负整数num1和num2，返回num1和num2的乘积，它们的乘积也表示为字符串形式。
+
+**示例 1:**
+```
+输入: num1 = "2", num2 = "3"
+
+输出: "6"
+
+**示例2:**
+```
+输入: num1 = "123", num2 = "456"
+
+输出: "56088"
+
+说明：
+
+
+	num1和num2的长度小于110。
+	num1 和num2 只包含数字0-9。
+	num1 和num2均不以零开头，除非是数字 0 本身。
+	不能使用任何标准库的大数类型（比如 BigInteger）或直接将输入转换为整数来处理。
+```
+
+## Description
+Given two non-negative integers num1 and num2 represented as strings, return the product of num1 and num2, also represented as a string.
+
+**Example 1:**
+```
+Input: num1 = "2", num2 = "3"
+
+Output: "6"
+
+**Example 2:**
+```
+Input: num1 = "123", num2 = "456"
+
+Output: "56088"
+```
+**Note:**
+
+
+
+	The length of both num1 and num2 is < 110.
+	Both num1 and num2 containonly digits 0-9.
+	Both num1 and num2do not contain any leading zero, except the number 0 itself.
+	You must not use any built-in BigInteger library or convert the inputs to integer directly.
+
+
+
 ## 字符串表示的数相乘
 ### 解法
 从低位依次相乘后相加. 注意处理进位. 注意最后结果去除高位的0.
