--- a/String/65.valid-number.md
+++ b/String/65.valid-number.md
@@ -1,3 +1,37 @@
+# 有效数字（Valid Number）Hard
+## 描述
+验证给定的字符串是否为数字。
+
+例如:
+"0" => true
+" 0.1 " => true
+"abc" => false
+"1 a" => false
+"2e10" => true
+
+说明:我们有意将问题陈述地比较模糊。在实现代码之前，你应当事先思考所有可能的情况。
+
+更新于 2015-02-10:
+C++函数的形式已经更新了。如果你仍然看见你的函数接收const char * 类型的参数，请点击重载按钮重置你的代码。
+```
+
+## Description
+Validate if a given string is numeric.
+
+Some examples:
+"0" => true
+" 0.1 " => true
+"abc" => false
+"1 a" => false
+"2e10" => true
+```
+**Note:**
+ It is intended for the problem statement to be ambiguous. You should gather all requirements up front before implementing one.
+
+Update (2015-02-10):
+The signature of the C++ function had been updated. If you still see your function signature accepts a const char * argument, please click the reload button to reset your code definition.
+
+
 ## 判断字符串是否为数字表示
 ### 解法
 先截取中间非空格的子串, 依次判断各个字符:
