--- a/LinkedList/142.linked-list-cycle-ii.md
+++ b/LinkedList/142.linked-list-cycle-ii.md
@@ -1,3 +1,24 @@
+# 环形链表 II（Linked List Cycle II）Medium
+## 描述
+给定一个链表，返回链表开始入环的第一个节点。如果链表无环，则返回null。
+
+说明：不允许修改给定的链表。
+
+进阶：
+你是否可以不用额外空间解决此题？
+```
+
+## Description
+Given a linked list, return the node where the cycle begins. If there is no cycle, return null.
+```
+**Note:**
+ Do not modify the linked list.
+
+
+Follow up:
+Can you solve it without using extra space?
+
+
 ## 链表环
 ### 解法
 fast slow
