--- a/LinkedList/86.partition-list.md
+++ b/LinkedList/86.partition-list.md
@@ -1,3 +1,29 @@
+# 分隔链表（Partition List）Medium
+## 描述
+给定一个链表和一个特定值 x，对链表进行分隔，使得所有小于 x 的节点都在大于或等于 x 的节点之前。
+
+你应当保留两个分区中每个节点的初始相对位置。
+
+**示例:**
+```
+输入: head = 1->4->3->2->5->2, x = 3
+
+输出: 1->2->2->4->3->5
+```
+
+## Description
+Given a linked list and a value x, partition it such that all nodes less than x come before nodes greater than or equal to x.
+
+You should preserve the original relative order of the nodes in each of the two partitions.
+
+**Example:**
+```
+Input: head = 1->4->3->2->5->2, x = 3
+
+Output: 1->2->2->4->3->5
+```
+
+
 ## 拆分链表, 比给定数小的在前, 大的在后, 保持顺序
 ### 解法
 逻辑上维护一个新链表表示大的数, 遇到大的数往新链表添加.
