--- a/LinkedList/92.reverse-linked-list-ii.md
+++ b/LinkedList/92.reverse-linked-list-ii.md
@@ -1,3 +1,31 @@
+# 反转链表 II（Reverse Linked List II）Medium
+## 描述
+反转从位置 m 到 n 的链表。请使用一趟扫描完成反转。
+
+说明:
+1 &le;m&le;n&le; 链表长度。
+
+**示例:**
+```
+输入: 1->2->3->4->5->NULL, m = 2, n = 4
+
+输出: 1->4->3->2->5->NULL
+```
+
+## Description
+Reverse a linked list from position m to n. Do it in one-pass.
+```
+**Note:**
+1 &le; m &le; n &le; length of list.
+
+**Example:**
+```
+Input: 1->2->3->4->5->NULL, m = 2, n = 4
+
+Output: 1->4->3->2->5->NULL
+
+
+
 ## 反转子链表
 ### 解法
 找到自链表的头尾, 将尾置空, 反转子链表; 开始时保存子链表前一个和后一个节点, 反转结束接回去.
