--- a/LinkedList/138.copy-list-with-random-pointer.md
+++ b/LinkedList/138.copy-list-with-random-pointer.md
@@ -1,3 +1,19 @@
+# 复制带随机指针的链表（Copy List with Random Pointer）Medium
+## 描述
+给定一个链表，每个节点包含一个额外增加的随机指针，该指针可以指向链表中的任何节点或空节点。
+
+要求返回这个链表的深度拷贝。
+```
+
+## Description
+A linked list is given such that each node contains an additional random pointer which could point to any node in the list or null.
+
+
+
+Return a deep copy of the list.
+```
+
+
 ## 复制复杂链表
 ### 解法
 - 每个节点先拷贝一个节点在后面
