--- a/LinkedList/23.merge-k-sorted-lists.md
+++ b/LinkedList/23.merge-k-sorted-lists.md
@@ -1,3 +1,35 @@
+# 合并K个排序链表（Merge k Sorted Lists）Hard
+## 描述
+合并k个排序链表，返回合并后的排序链表。请分析和描述算法的复杂度。
+
+**示例:**
+```
+输入:
+[
+ 1->4->5,
+ 1->3->4,
+ 2->6
+]
+
+输出: 1->1->2->3->4->4->5->6
+```
+
+## Description
+Merge k sorted linked lists and return it as one sorted list. Analyze and describe its complexity.
+
+**Example:**
+```
+Input:
+[
+ 1->4->5,
+ 1->3->4,
+ 2->6
+]
+
+Output: 1->1->2->3->4->4->5->6
+```
+
+
 ## 合并k个排序链表
 ### 解法
 两两merge
