--- a/LinkedList/24.swap-nodes-in-pairs.md
+++ b/LinkedList/24.swap-nodes-in-pairs.md
@@ -1,3 +1,34 @@
+# 两两交换链表中的节点（Swap Nodes in Pairs）Medium
+## 描述
+给定一个链表，两两交换其中相邻的节点，并返回交换后的链表。
+
+**示例:**
+```
+给定 1->2->3->4, 你应该返回 2->1->4->3.
+
+说明:
+
+
+	你的算法只能使用常数的额外空间。
+	你不能只是单纯的改变节点内部的值，而是需要实际的进行节点交换。
+```
+
+## Description
+Given alinked list, swap every two adjacent nodes and return its head.
+
+**Example:**
+```
+Given 1->2->3->4, you should return the list as 2->1->4->3.
+```
+**Note:**
+
+
+
+	Your algorithm should use only constant extra space.
+	You may not modify the values in the list&#39;s nodes, only nodes itself may be changed.
+
+
+
 ## 成对交换链表节点
 ### 解法
 三个指针: prev, first, second, 注意判断NULL.
