--- a/LinkedList/83.remove-duplicates-from-sorted-list.md
+++ b/LinkedList/83.remove-duplicates-from-sorted-list.md
@@ -1,3 +1,39 @@
+# 删除排序链表中的重复元素（Remove Duplicates from Sorted List）Easy
+## 描述
+给定一个排序链表，删除所有重复的元素，使得每个元素只出现一次。
+
+**示例1:**
+```
+输入: 1->1->2
+
+输出: 1->2
+
+
+**示例2:**
+```
+输入: 1->1->2->3->3
+
+输出: 1->2->3
+```
+
+## Description
+Given a sorted linked list, delete all duplicates such that each element appear only once.
+
+**Example 1:**
+```
+Input: 1->1->2
+
+Output: 1->2
+
+
+**Example 2:**
+```
+Input: 1->1->2->3->3
+
+Output: 1->2->3
+```
+
+
 ## 移除重复节点
 ### 解法
 判断next节点, 满足再移动
