--- a/DynamicProgramming/85.maximal-rectangle.md
+++ b/DynamicProgramming/85.maximal-rectangle.md
@@ -1,3 +1,37 @@
+# 最大矩形（Maximal Rectangle）Hard
+## 描述
+给定一个仅包含0 和 1 的二维二进制矩阵，找出只包含 1 的最大矩形，并返回其面积。
+
+**示例:**
+```
+输入:
+[
+  ["1","0","1","0","0"],
+  ["1","0","1","1","1"],
+  ["1","1","1","1","1"],
+  ["1","0","0","1","0"]
+]
+
+输出: 6
+```
+
+## Description
+Given a 2D binary matrix filled with 0&#39;s and 1&#39;s, find the largest rectangle containing only 1&#39;s and return its area.
+
+**Example:**
+```
+Input:
+[
+  ["1","0","1","0","0"],
+  ["1","0","1","1","1"],
+  ["1","1","1","1","1"],
+  ["1","0","0","1","0"]
+]
+
+Output: 6
+```
+
+
 ## 最大的矩形面积
 ### 解法
 维护当前位置向上扩展高度后所能向左和向右扩展的矩形面积. 分别保存高度, 左边位置, 右边位置.
