--- a/DynamicProgramming/132.palindrome-partitioning-ii.md
+++ b/DynamicProgramming/132.palindrome-partitioning-ii.md
@@ -1,3 +1,33 @@
+# 分割回文串 II（Palindrome Partitioning II）Hard
+## 描述
+给定一个字符串 s，将 s 分割成一些子串，使每个子串都是回文串。
+
+返回符合要求的最少分割次数。
+
+**示例:**
+```
+输入:"aab"
+
+输出: 1
+
+解释: 进行一次分割就可将s 分割成 ["aa","b"] 这样两个回文子串。
+```
+
+## Description
+Given a string s, partition s such that every substring of the partition is a palindrome.
+
+Return the minimum cuts needed for a palindrome partitioning of s.
+
+**Example:**
+```
+Input:"aab"
+
+Output: 1
+
+Explanation: The palindrome partitioning ["aa","b"] could be produced using 1 cut.
+```
+
+
 ## 将字符串分割为回文子串的最小切割数
 ### 解法
 动态规划: 假设到当前有一个回文串, 则当前的最小切割数为到当前位置的回文串之前的位置的最小切割数+1, 这些结果中的最小一个.
