--- a/DynamicProgramming/97.interleaving-string.md
+++ b/DynamicProgramming/97.interleaving-string.md
@@ -1,3 +1,39 @@
+# 交错字符串（Interleaving String）Hard
+## 描述
+给定三个字符串s1, s2, s3, 验证s3是否是由s1和s2 交错组成的。
+
+**示例 1:**
+```
+输入: s1 = "aabcc", s2 = "dbbca", s3 = "aadbbcbcac"
+
+输出: true
+
+
+**示例2:**
+```
+输入: s1 = "aabcc", s2 = "dbbca", s3 = "aadbbbaccc"
+
+输出: false
+```
+
+## Description
+Given s1, s2, s3, find whether s3 is formed by the interleaving of s1 and s2.
+
+**Example 1:**
+```
+Input: s1 = "aabcc", s2 = "dbbca", s3 = "aadbbcbcac"
+
+Output: true
+
+
+**Example 2:**
+```
+Input: s1 = "aabcc", s2 = "dbbca", s3 = "aadbbbaccc"
+
+Output: false
+```
+
+
 ## 判断字符串是否由两个字符串交叉而成.
 ### 解法
 f(i,j)表示s3(0-j)由s1(0-i)交叉s2(0-j), 则f(i,j)去掉最后一个字符, 有可能是f(i-1,j)或者f(i,j-1), 再分别匹配s1(i)或s2(j)
