--- a/Array/036.valid-sudoku.md
+++ b/Array/036.valid-sudoku.md
@@ -117,8 +117,6 @@ Explanation: Same as Example 1, except with the 5 in the top left corner being
 ```
 **Note:**
 
-
-
 	A Sudoku board (partially filled) could be valid but is not necessarily solvable.
 	Only the filled cells need to be validated according to the mentionedrules.
 	The given boardcontain only digits 1-9 and the character &#39;.&#39;.
@@ -128,58 +126,32 @@ Explanation: Same as Example 1, except with the 5 in the top left corner being
 
 ## 合格的数独
 ### 解法
-行扫一次, 列扫一次, 每个3x3小格扫一次.
+行扫一次, 列扫一次, 每个3x3小格扫一次. 使用位操作, 分别使用行/列/小格的数组来判断一个数是否在行/列/小格, 方法是判断对应的位是否为1.
 ```c++
 class Solution {
 public:
     bool isValidSudoku(vector<vector<char>>& board) {
-        int n = board.size();
-        if (n != 9) {
-            return false;
-        }
-        
-        for (int i = 0; i < n; i++) {
-            map<char, int> exist;
-            for (int j = 0; j < n; j++) {
+        vector<int> row(9), col(9), squ(9);
+        for (int i = 0; i < 9; i++) {
+            for (int j = 0; j < 9; j++) {
                 if (board[i][j] == '.') {
                     continue;
                 }
-                if (exist.find(board[i][j]) != exist.end()) {
+                
+                if (board[i][j] < '1' || board[i][j] > '9') {
                     return false;
                 }
-                exist[board[i][j]] = 1;
-            }
-        }
-        
-        for (int j = 0; j < n; j++) {
-            map<char, int> exist;
-            for (int i = 0; i < n; i++) {
-                if (board[i][j] == '.') {
-                    continue;
-                }
-                if (exist.find(board[i][j]) != exist.end()) {
+                int num = board[i][j] - '0';
+                
+                if ((row[i] & (1 << num)) ||
+                   (col[j] & (1 << num)) ||
+                   (squ[(i/3)*3 + (j/3)] & (1 << num))) {
                     return false;
                 }
-                exist[board[i][j]] = 1;
-            }
-        }
-        
-        for (int k = 0; k < 3; k++) {
-            for (int l = 0; l < 3; l++) {
-                map<char, int> exist;
-                for (int ii = 0; ii < 3; ii++) {
-                    for (int jj = 0; jj < 3; jj++) {
-                        int i = k * 3 + ii;
-                        int j = l * 3 + jj;
-                        if (board[i][j] == '.') {
-                            continue;
-                        }
-                        if (exist.find(board[i][j]) != exist.end()) {
-                            return false;
-                        }
-                        exist[board[i][j]] = 1;
-                    }
-                }
+                
+                row[i] |= (1 << num);
+                col[j] |= (1 << num);
+                squ[(i/3) * 3 + (j/3)] |= (1<< num);
             }
         }
         
