--- a/Array/080.remove-duplicates-from-sorted-array-ii.md
+++ b/Array/080.remove-duplicates-from-sorted-array-ii.md
@@ -28,11 +28,11 @@
 为什么返回数值是整数，但
 输出的答案是数组呢?
 
-请注意，输入数组是以&ldquo;引用&rdquo;方式传递的，这意味着在函数里修改输入数组对于调用者是可见的。
+请注意，输入数组是以"引用"方式传递的，这意味着在函数里修改输入数组对于调用者是可见的。
 
 你可以想象内部操作如下:
 
-// nums 是以&ldquo;引用&rdquo;方式传递的。也就是说，不对实参做任何拷贝
+// nums 是以"引用"方式传递的。也就是说，不对实参做任何拷贝
 int len = removeDuplicates(nums);
 
 // 在函数里修改输入数组对于调用者是可见的。
@@ -52,7 +52,7 @@ Given nums = [1,1,1,2,2,3],
 
 Your function should return length = 5, with the first five elements of nums being 1, 1, 2, 2 and 3 respectively.
 
-It doesn&#39;t matter what you leave beyond the returned length.
+It doesn't matter what you leave beyond the returned length.
 ```
 
 **Example 2:**
@@ -61,7 +61,7 @@ Given nums = [0,0,1,1,1,1,2,3,3],
 
 Your function should return length = 7, with the first seven elements of nums being modified to0, 0, 1, 1, 2, 3 and3 respectively.
 
-It doesn&#39;t matter what values are set beyondthe returned length.
+It doesn't matter what values are set beyondthe returned length.
 ```
 
 
@@ -86,26 +86,22 @@ for (int i = 0; i < len; i++) {
 
 ## 删除重复元素, 最多只允许出现两次
 ### 解法
-一个指针存, 一个指针读, 计数, 每次记完一个数的出现次数后填数
+依次扫描, 增加一个计数.
+
 ```c++
 class Solution {
 public:
     int removeDuplicates(vector<int>& nums) {
-        int n = nums.size();
-        int pos = 0, curr = 0, cnt = 0;
-        while (curr < n) {
-            int val = nums[curr];
-            while (curr < n && nums[curr] == val) {
-                curr++;
-                cnt++;
+        int cnt = 0;
+        int pos = 0;
+        for (int num : nums) {
+            if (pos == 0 || nums[pos-1] != num || cnt < 2) {
+                nums[pos] = num;
+                if (pos == 0 || nums[pos-1] == num) cnt++;
+                else cnt = 1;
+                pos++;
             }
-            cnt = min(cnt, 2);
-            for (int i = 0; i < cnt; i++) {
-                nums[pos++] = val;
-            }
-            cnt = 0;
         }
-        
         return pos;
     }
 };
