--- a/Array/057.insert-interval.md
+++ b/Array/057.insert-interval.md
@@ -46,7 +46,9 @@ Explanation: Because the new interval [4,8] overlaps with [3,5],[6,7],[8,10].
 
 ## 向区间序列插入区间
 ### 解法
-找到插入的起始位置: 先跳过在该区间前面并且不相交的区间, 如果到达末尾则只要附加上当前区间即可, 如果前面没有区间, 判断第一个区间是否与当前区间相交, 如果不相交则当前区间附加上原始所有区间即可. 如果相交则找到最后一个相交区间, 更新左右区间端点, 将剩余区间附加上.
+类似前一道题, 依次按照是否相交合并区间, 只不过这部分放在中间, 还要将前面和后面不相交的区间放进结果.
+
+即依次将前面的区间放入结果; 找到第一个相交的区间依次合并, 直到不相交时把这个区间放入结果; 依次把后面的区间放入结果.
 ```
 /**
  * Definition for an interval.
@@ -62,43 +64,30 @@ public:
     vector<Interval> insert(vector<Interval>& intervals, Interval newInterval) {
         vector<Interval> res;
         int n = intervals.size();
-        if (!n) {
-            res.push_back(newInterval);
-            return res;
-        }
         
-        int left = n, right = n;
-        for (int i = 0; i < n; i++) {
+        int i = 0;
+        for (; i < n; i++) {
             if (intervals[i].end < newInterval.start) {
-                res.push_back(intervals[i]);
+                res.emplace_back(intervals[i]);
             }
             else {
-                left = i;
+                newInterval.start = min(intervals[i].start, newInterval.start);
                 break;
             }
         }
         
-        if (intervals[left].start > newInterval.end) {
-            right = left;
-        }
-        else {
-            if (left < n) {
-                newInterval.start = min(newInterval.start, intervals[left].start);
-
-                for (int i = left + 1; i < n; i++) {
-                    if (intervals[i].start > newInterval.end) {
-                        right = i;
-                        break;
-                    }
-                }
-                newInterval.end = max(newInterval.end, intervals[right-1].end);
+        for (; i < n; i++) {
+            if (intervals[i].start <= newInterval.end) {
+                newInterval.end = max(newInterval.end, intervals[i].end);
+            }
+            else {
+                break;
             }
         }
+        res.emplace_back(newInterval);
         
-        res.push_back(newInterval);
-        
-        for (int i = right; i < n; i++) {
-            res.push_back(intervals[i]);
+        for (i; i < n; i++) {
+            res.emplace_back(intervals[i]);
         }
         
         return res;
