--- a/LinkedList/083.remove-duplicates-from-sorted-list.md
+++ b/LinkedList/083.remove-duplicates-from-sorted-list.md
@@ -38,44 +38,22 @@ Output: 1->2->3
 
 ## 移除重复节点
 ### 解法
-判断next节点, 满足再移动
+依次判断当前节点是否与上一个节点相同，是则删除，否则移动前一个节点。
 ```c++
-/**
- * Definition for singly-linked list.
- * struct ListNode {
- *     int val;
- *     ListNode *next;
- *     ListNode(int x) : val(x), next(NULL) {}
- * };
- */
 class Solution {
 public:
     ListNode* deleteDuplicates(ListNode* head) {
-        if (!head) {
-            return NULL;
-        }
-        
-        ListNode *dummy = new ListNode(0);
-        dummy->next = head;
-        ListNode *prev = dummy, *curr = head;
-        
-        while (curr && curr->next) {
-            int val = curr->val;
-            while (curr->next) {
-                if (curr->next->val != val) {
-                    prev->next = curr;
-                    prev = curr;
-                    curr = curr->next;
-                    break;
-                }
-                curr = curr->next;
+        ListNode *prev = head, *curr = head ? head->next : NULL;
+        while (curr) {
+            if (curr->val == prev->val) {
+                prev->next = curr->next;
             }
+            else {
+                prev = prev->next;
+            }
+            curr = curr->next;
         }
-        prev->next = curr;
-        curr->next = NULL;
         
-        head = dummy->next;
-        delete dummy;
         return head;
     }
 };
