--- a/BinarySearch/004.median-of-two-sorted-arrays.md
+++ b/BinarySearch/004.median-of-two-sorted-arrays.md
@@ -56,7 +56,7 @@ The median is (2 + 3)/2 = 2.5
 - A[i-1] <= B[j]
 - B[j-1] <= A[i]
 前两个因为数组有序自动成立, 转化为找i, j.
-而根据长度关系, `i+j = m-i+n-j`, `j=(m+n)/2`或`(m+n+1)/2`.
+而根据长度关系, `i+j = m-i+n-j`, `j=(m+n)/2-i`或`(m+n+1)/2-i`.
 用二分法找i, 初始区间[0,m]
 
 - `j==0` || `i==m` || `B[j-1] <= A[i]` 且
