--- a/BinarySearch/081.search-in-rotated-sorted-array-ii.md
+++ b/BinarySearch/081.search-in-rotated-sorted-array-ii.md
@@ -63,6 +63,8 @@ Follow up:
 - 左中右相等则左右往中间收缩.
 - 如果左边非降, 根据端点判断是否落在左边, 否则往右边寻找;
 - 否则一定是右边非降,  根据两个端点判断是否落在右边, 否则往左边查找.
+
+要点：先判相等，再跳过重复，最后看哪边升序。
 ```c++
 class Solution {
 public:
