--- a/BinarySearch/153.find-minimum-in-rotated-sorted-array.md
+++ b/BinarySearch/153.find-minimum-in-rotated-sorted-array.md
@@ -55,26 +55,27 @@ Output: 0
 
 先判断是否rotate, 再判断rotate了的情况.
 
-```c++
-int findMin(vector<int> &nums) {
-	int l = 0, r = int(nums.size()) - 1;
-	
-	if (nums[l] < nums[r]) {
-		return nums[0];
-	}
-	
-	while (l < r - 1) {
-		int m = (l + r) / 2;
-		if (nums[m] < nums[l]) {
-			r = m;
-		}
-		else {
-			l = m;
-		}
-	}
+要点：跟右边比。    
 
-	return nums[r];
-}
+```c++
+class Solution {
+public:
+    int findMin(vector<int>& nums) {
+        int n = nums.size();
+        if (!n) return 0;
+        
+        int low = 0, high = n-1;
+        if (nums[low] < nums[high]) return nums[low];
+        
+        while (low < high) {
+            int mid = low + (high - low) / 2;
+            if (nums[mid] > nums[high]) low = mid + 1;
+            else high = mid;
+        }
+        
+        return nums[low];
+    }
+};
 ```
 
 #### 顺序查找(O(n))
