--- a/BinarySearch/154.find-minimum-in-rotated-sorted-array-ii.md
+++ b/BinarySearch/154.find-minimum-in-rotated-sorted-array-ii.md
@@ -60,51 +60,40 @@ Output: 0
 
 类似153, 但需要处理重复值的情况.
 
-首先依然先判断是否已经有序.
-
-分a[m] <;>;= a[l]三种情况, 前两种同153.
-
-a[m] == a[l] 时, 比较a[m]与a[r]:
-- a[m] > a[r], 则处理右端
-- a[m] == a[r] (因为若非有序则a[l]>=a[r], 而a[m]==a[l]), 则有可能在左边也有可能在右边,如: 
-`[1,1,0,1]`, `[1,0,1,1,1]`. 
-此时l跳到下一位置, 同时判断[l,r]是否已经有序.
+要点：跟右边比，相等再跟左边比。
 
 最坏情况, 数组每个元素都相同, 退化到线性查找.
 
 
 ```c++
-int findMin(vector<int> &nums) {
-	int l = 0, r = int(nums.size()) - 1;
-	
-	// [l,r] is sorted
-	if (nums[l] < nums[r]) {
-		return nums[l];
-	}
+class Solution {
+public:
+    int findMin(vector<int> &nums) {
+        int n = nums.size();
+        if (!n) {
+            return 0;
+        }
+        
+        int low = 0, high = n - 1;
+        while (low < high) {
+        	int mid = low + (high - low) / 2;
+        	if (nums[mid] < nums[high]) {
+        		high = mid;
+        	}
+        	else if (nums[mid] > nums[high]) {
+        		low = mid + 1;
+        	}
+        	else {
+        		if (nums[mid] < nums[low]) {
+        			high = mid;
+        		}
+        		else {
+        			high--;
+        		}
+        	}
+        }
 
-	while (l < r - 1) {
-		int m = (l + r) / 2;
-		if (nums[m] > nums[l]) {
-			l = m;
-		}
-		else if (nums[m] < nums[l]) {
-			r = m;
-		}
-		else {	// nums[m] == nums[l]
-			if (nums[m] > nums[r]) {
-				l = m;
-			}
-			else {	// nums[m] == nums[r]
-				l++;
-
-				// [l,r] is sorted
-				if (nums[l] < nums[r]) {
-					return nums[l];
-				}
-			}
-		}
-	}
-
-	return min(nums[l], nums[r]);
-}
+        return nums[low];
+    }
+};
 ```
