--- a/BinarySearch/034.find-first-and-last-position-of-element-in-sorted-array.md
+++ b/BinarySearch/034.find-first-and-last-position-of-element-in-sorted-array.md
@@ -48,45 +48,48 @@ Output: [-1,-1]
 注意第二次查找时一个边界可缩小至第一次查找得到的位置。
 
 ```c++
-vector<int> searchRange(vector<int>& nums, int target) {
-	int l, r;
-	l = 0, r = nums.size();
-
-	// upper bound
-	while (l < r) {
-		int mid = (l + r) / 2;
-		if (nums[mid] <= target) {
-			l = mid + 1;
-		}
-		else {
-			r = mid;
-		}
-	}
-	int high = l - 1;
-
-	// lower bound
-	l = 0, r = high + 1;
-	while (l < r) {
-		int mid = (l + r) / 2;
-		if (nums[mid] >= target) {
-			r = mid;
-		}
-		else {
-			l = mid + 1;
-		}
-	}
-	int low = l;
-
-	vector<int> ans;
-	if (low <= high) {
-		ans.push_back(low);
-		ans.push_back(high);
-	}
-	else {
-		ans.push_back(-1);
-		ans.push_back(-1);
-	}
-
-	return ans;
-}
+class Solution {
+public:
+    vector<int> searchRange(vector<int>& nums, int target) {
+        int low = lower_bound(nums, target);
+        int high = upper_bound(nums, target);
+        return vector<int>({low, high});
+    }
+    
+    int lower_bound(vector<int> &nums, int target) {
+        int n = nums.size();
+        if (!n) return -1;
+        int low = 0, high = n - 1;
+        while (low < high) {
+            int mid = low + (high - low) / 2;
+            if (nums[mid] > target) high = mid - 1;
+            else if (nums[mid] < target) low = mid + 1;
+            else {
+                if (mid == 0 || nums[mid-1] != target) {
+                    return mid;
+                }
+                high = mid - 1;
+            }
+        }
+        return nums[low] == target ? low : -1;
+    }
+    
+    int upper_bound(vector<int> &nums, int target) {
+        int n = nums.size();
+        if (!n) return -1;
+        int low = 0, high = n - 1;
+        while (low < high) {
+            int mid = low + (high - low) / 2;
+            if (nums[mid] > target) high = mid - 1;
+            else if (nums[mid] < target) low = mid + 1;
+            else {
+                if (mid == n-1 || nums[mid+1] != target) {
+                    return mid;
+                }
+                low = mid + 1;
+            }
+        }
+        return nums[high] == target ? high : -1;
+    }
+};
 ```
