--- a/DynamicProgramming/300.longest-increasing-subsequence.md
+++ b/DynamicProgramming/300.longest-increasing-subsequence.md
@@ -44,10 +44,38 @@ Follow up: Could you improve it to O(n log n) time complexity?
 
 
 ## 数组最长连续递增子序列长度
-### 解法
-DP: dp[i] = max(dp[j]), 0<=j<i
-dp[0] = 1
-结果为max(dp[i]), 0<=i<n
+### 解法1 (O(n^2))
+DP: dp[i] = max(dp[j]), 0<=j<i, if a[i]>a[j]
+```c++
+class Solution {
+public:
+    int lengthOfLIS(vector<int>& nums) {
+        int n = nums.size();
+        if (!n) {
+            return 0;
+        }
+        
+        int maxLen = 1;
+        int dp[n] = {0};
+        dp[0] = 1;
+        
+        for (int i = 1; i < n; i++) {
+            for (int j = 0; j < i; j++) {
+                if (nums[i] > nums[j]) {
+                    dp[i] = max(dp[i], dp[j]);
+                }
+            }
+            dp[i]++;
+            maxLen = max(maxLen, dp[i]);
+        }
+        
+        return maxLen;
+    }
+};
+```
+
+### 解法2：O(nlogn)
+每次将当前数放到尾部数组第一个比当前数大的位置，因为往后肯定是比当前数大且下标小的数，不符合要求，往前都是小的数，且是当前最长。每步都是二分查找，一共O(nlogn)
 ```c++
 class Solution {
 public:
