--- a/Array/059.spiral-matrix-ii.md
+++ b/Array/059.spiral-matrix-ii.md
@@ -1,5 +1,5 @@
 # 螺旋矩阵 II（Spiral Matrix II）*Medium*
-### [螺旋矩阵 II](https://leetcode-cn.com/problems/spiral-matrix-ii)（[Origin](https://leetcode.com/problems/spiral-matrix-ii)）
+### [原题链接](https://leetcode-cn.com/problems/spiral-matrix-ii)（[Origin](https://leetcode.com/problems/spiral-matrix-ii)）
 ## 描述
 给定一个正整数n，生成一个包含 1 到n2所有元素，且元素按顺时针顺序螺旋排列的正方形矩阵。
 
