--- a/Array/137.single-number-ii.md
+++ b/Array/137.single-number-ii.md
@@ -1,5 +1,5 @@
 # 只出现一次的数字 II（Single Number II）*Medium*
-### [只出现一次的数字 II](https://leetcode-cn.com/problems/single-number-ii)（[Origin](https://leetcode.com/problems/single-number-ii)）
+### [原题链接](https://leetcode-cn.com/problems/single-number-ii)（[Origin](https://leetcode.com/problems/single-number-ii)）
 ## 描述
 给定一个非空整数数组，除了某个元素只出现一次以外，其余每个元素均出现了三次。找出那个只出现了一次的元素。
 
