--- a/HashTable/219.contains-duplicate-ii.md
+++ b/HashTable/219.contains-duplicate-ii.md
@@ -1,5 +1,5 @@
 # 存在重复元素 II（Contains DuplicateII）*Easy*
-### [存在重复元素 II](https://leetcode-cn.com/problems/contains-duplicate-ii)（[Origin](https://leetcode.com/problems/contains-duplicate-ii)）
+### [原题链接](https://leetcode-cn.com/problems/contains-duplicate-ii)（[Origin](https://leetcode.com/problems/contains-duplicate-ii)）
 ## 描述
 给定一个整数数组和一个整数 k，判断数组中是否存在两个不同的索引 i 和 j，使得 nums [i] = nums [j]，并且 i 和 j 的差的绝对值最大为 k。
 **示例 1:**
