--- a/HashTable/350.intersection-of-two-arrays-ii.md
+++ b/HashTable/350.intersection-of-two-arrays-ii.md
@@ -1,5 +1,5 @@
 # 两个数组的交集 II（Intersection of Two Arrays II）*Easy*
-### [两个数组的交集 II](https://leetcode-cn.com/problems/intersection-of-two-arrays-ii)（[Origin](https://leetcode.com/problems/intersection-of-two-arrays-ii)）
+### [原题链接](https://leetcode-cn.com/problems/intersection-of-two-arrays-ii)（[Origin](https://leetcode.com/problems/intersection-of-two-arrays-ii)）
 ## 描述
 给定两个数组，编写一个函数来计算它们的交集。
 
