--- a/LinkedList/023.merge-k-sorted-lists.md
+++ b/LinkedList/023.merge-k-sorted-lists.md
@@ -1,5 +1,5 @@
 # 合并K个排序链表（Merge k Sorted Lists）*Hard*
-### [合并K个排序链表](https://leetcode-cn.com/problems/merge-k-sorted-lists)（[Origin](https://leetcode.com/problems/merge-k-sorted-lists)）
+### [原题链接](https://leetcode-cn.com/problems/merge-k-sorted-lists)（[Origin](https://leetcode.com/problems/merge-k-sorted-lists)）
 ## 描述
 合并k个排序链表，返回合并后的排序链表。请分析和描述算法的复杂度。
 
