--- a/LinkedList/146.lru-cache.md
+++ b/LinkedList/146.lru-cache.md
@@ -1,5 +1,5 @@
 # LRU缓存机制（LRU Cache）*Hard*
-### [LRU缓存机制](https://leetcode-cn.com/problems/lru-cache)（[Origin](https://leetcode.com/problems/lru-cache)）
+### [原题链接](https://leetcode-cn.com/problems/lru-cache)（[Origin](https://leetcode.com/problems/lru-cache)）
 ## 描述
 运用你所掌握的数据结构，设计和实现一个 LRU (最近最少使用) 缓存机制。它应该支持以下操作： 获取数据 get 和 写入数据 put 。
 
