--- a/LinkedList/025.reverse-nodes-in-k-group.md
+++ b/LinkedList/025.reverse-nodes-in-k-group.md
@@ -1,5 +1,5 @@
 # k个一组翻转链表（Reverse Nodes in k）*Hard*
-### [k个一组翻转链表](https://leetcode-cn.com/problems/reverse-nodes-in-k-group)（[Origin](https://leetcode.com/problems/reverse-nodes-in-k-group)）
+### [原题链接](https://leetcode-cn.com/problems/reverse-nodes-in-k-group)（[Origin](https://leetcode.com/problems/reverse-nodes-in-k-group)）
 ## 描述
 给出一个链表，每k个节点一组进行翻转，并返回翻转后的链表。
 
