--- a/LinkedList/082.remove-duplicates-from-sorted-list-ii.md
+++ b/LinkedList/082.remove-duplicates-from-sorted-list-ii.md
@@ -1,5 +1,5 @@
 # 删除排序链表中的重复元素 II（Remove Duplicates from Sorted List II）*Medium*
-### [删除排序链表中的重复元素 II](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-list-ii)（[Origin](https://leetcode.com/problems/remove-duplicates-from-sorted-list-ii)）
+### [原题链接](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-list-ii)（[Origin](https://leetcode.com/problems/remove-duplicates-from-sorted-list-ii)）
 ## 描述
 给定一个排序链表，删除所有含有重复数字的节点，只保留原始链表中没有重复出现的数字。
 
