--- a/LinkedList/142.linked-list-cycle-ii.md
+++ b/LinkedList/142.linked-list-cycle-ii.md
@@ -1,5 +1,5 @@
 # 环形链表 II（Linked List Cycle II）*Medium*
-### [环形链表 II](https://leetcode-cn.com/problems/linked-list-cycle-ii)（[Origin](https://leetcode.com/problems/linked-list-cycle-ii)）
+### [原题链接](https://leetcode-cn.com/problems/linked-list-cycle-ii)（[Origin](https://leetcode.com/problems/linked-list-cycle-ii)）
 ## 描述
 给定一个链表，返回链表开始入环的第一个节点。如果链表无环，则返回null。
 
