--- a/Tree/094.binary-tree-inorder-traversal.md
+++ b/Tree/094.binary-tree-inorder-traversal.md
@@ -37,7 +37,7 @@ Output: [1,3,2]
 Follow up: Recursive solution is trivial, could you do it iteratively?
 
 
-## 中序遍历
+### 递归方法
 ```c++
 /**
  * Definition for a binary tree node.
@@ -64,6 +64,34 @@ public:
         dfs(root->left, nodes);
         nodes.push_back(root->val);
         dfs(root->right, nodes);
+    }
+};
+```
+
+### 非递归方法
+使用一个栈来保存父节点们, 使用弹出来完成回溯.
+```c++
+class Solution {
+public:
+    vector<int> inorderTraversal(TreeNode* root) {
+        vector<int> res;
+        stack<TreeNode*> s;
+        TreeNode *curr = root;
+        
+        while (!s.empty() || curr) {
+            if (curr) {
+                s.push(curr);
+                curr = curr->left;
+            }
+            else {
+                curr = s.top();
+                s.pop();
+                res.push_back(curr->val);
+                curr = curr->right;
+            }
+        }
+        
+        return res;
     }
 };
 ```
