--- a/Tree/095.unique-binary-search-trees-ii.md
+++ b/Tree/095.unique-binary-search-trees-ii.md
@@ -1,5 +1,5 @@
 # 不同的二叉搜索树 II（Unique Binary Search Trees II）*Medium*
-### [不同的二叉搜索树 II](https://leetcode-cn.com/problems/unique-binary-search-trees-ii)（[Origin](https://leetcode.com/problems/unique-binary-search-trees-ii)）
+### [原题链接](https://leetcode-cn.com/problems/unique-binary-search-trees-ii)（[Origin](https://leetcode.com/problems/unique-binary-search-trees-ii)）
 ## 描述
 给定一个整数 n，生成所有由 1 ...n 为节点所组成的二叉搜索树。
 
