--- a/Tree/101.symmetric-tree.md
+++ b/Tree/101.symmetric-tree.md
@@ -60,17 +60,31 @@ Bonus points if you could solve it both recursively and iteratively.
 
 
 ## 判断二叉树是否对称
-### 两个栈, 分别左遍历和右遍历
+### 递归: 判断左遍历是否等于右遍历
 ```c++
-/**
- * Definition for a binary tree node.
- * struct TreeNode {
- *     int val;
- *     TreeNode *left;
- *     TreeNode *right;
- *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
- * };
- */
+class Solution {
+public:
+    bool isSymmetric(TreeNode* root) {
+        return isSymmetricEqual(root, root);
+    }
+    
+    bool isSymmetricEqual(TreeNode *root1, TreeNode *root2) {
+        if (!root1 && !root2) {
+            return true;
+        }
+        if (!root1 || !root2) {
+            return false;
+        }
+        if (root1->val != root2->val) {
+            return false;
+        }
+        return isSymmetricEqual(root1->left, root2->right) && isSymmetricEqual(root1->right, root2->left);
+    }
+};
+```
+
+### 非递归: 两个栈, 分别左遍历和右遍历
+```c++
 class Solution {
 public:
     bool isSymmetric(TreeNode* root) {
