--- a/Tree/110.balanced-binary-tree.md
+++ b/Tree/110.balanced-binary-tree.md
@@ -83,7 +83,7 @@ Return false.
 
 ## 平衡二叉树
 ### 解法
-注意需要左右都是平衡二叉树, 须判断`isBalance(left)` && `isBalance(right)`.
+dfs, 一边得到树深, 一边判断是否是平衡二叉树. 注意需要左右都是平衡二叉树, 须判断`isBalance(left)` && `isBalance(right)`.
 
 ```c++
 /**
