--- a/Tree/144.binary-tree-preorder-traversal.md
+++ b/Tree/144.binary-tree-preorder-traversal.md
@@ -40,7 +40,7 @@ Follow up: Recursive solution is trivial, could you do it iteratively?
 
 
 ## 前序遍历
-### 解法
+### 递归方法
 ```c++
 /**
  * Definition for a binary tree node.
@@ -67,6 +67,30 @@ public:
         
         if (root->left) dfs(root->left, nodes);
         if (root->right) dfs(root->right, nodes);
+    }
+};
+```
+### 非递归方法
+使用一个栈, 先入右再入左
+```c++
+class Solution {
+public:
+    vector<int> preorderTraversal(TreeNode* root) {
+        vector<int> res;
+        if (!root) return res;
+        
+        stack<TreeNode*> s;
+        s.push(root);
+        
+        while (!s.empty()) {
+            TreeNode *node = s.top();
+            res.push_back(node->val);
+            s.pop();
+            if (node->right) s.push(node->right);
+            if (node->left) s.push(node->left);
+        }
+        
+        return res;
     }
 };
 ```
