--- a/Tree/226.invert-binary-tree.md
+++ b/Tree/226.invert-binary-tree.md
@@ -61,18 +61,17 @@ Google: 90% of our engineers use the software you wrote (Homebrew), but you can&
 
 ### 递归交换节点的左右子树指针即可.
 ```c++
-TreeNode* invertTree(TreeNode* root) {
-    if (!root) {
-    	return root;
+class Solution {
+public:
+    TreeNode* invertTree(TreeNode* root) {
+        if (!root) return root;
+        
+        swap(root->left, root->right);
+
+        invertTree(root->left);
+        invertTree(root->right);
+        
+        return root;
     }
-
-    TreeNode *temp = root->left;
-    root->left = root->right;
-    root->right = temp;
-
-    invertTree(root->left);
-    invertTree(root->right);
-
-    return root;
-}
+};
 ```
