--- a/Tree/105.construct-binary-tree-from-preorder-and-inorder-traversal.md
+++ b/Tree/105.construct-binary-tree-from-preorder-and-inorder-traversal.md
@@ -7,9 +7,11 @@
 你可以假设树中没有重复的元素。
 
 例如，给出
+```
 
 前序遍历 preorder =[3,9,20,15,7]
 中序遍历 inorder = [9,3,15,20,7]
+```
 
 返回如下的二叉树：
 ```
@@ -23,19 +25,19 @@
 
 ## Description
 Given preorder and inorder traversal of a tree, construct the binary tree.
-```
 **Note:**
 
 You may assume that duplicates do not exist in the tree.
 
 For example, given
 
+```
 
 preorder =[3,9,20,15,7]
 inorder = [9,3,15,20,7]
+```
 
 Return the following binary tree:
-
 ```
 
     3
@@ -43,9 +45,10 @@ Return the following binary tree:
   9  20
     /  \
    15   7
+```
 
 
-类似106.
+类似106, 找根后递归重建两边.
 ```c++
 class Solution {
 public:
