--- a/Stack_Queue/032.longest-valid-parentheses.md
+++ b/Stack_Queue/032.longest-valid-parentheses.md
@@ -52,11 +52,9 @@ class Solution {
 public:
     int longestValidParentheses(string s) {
         int n = s.length();
-        if (n < 2) {
-            return 0;
-        }
         
         stack<int> par;
+        par.push(-1);
         for (int i = 0; i < n; i++) {
             if (s[i] == '(') {
                 par.push(i);
@@ -70,10 +68,7 @@ public:
                 }
             }
         }
-        
-        if (par.empty()) {
-            return n;
-        }
+        par.push(n);
         
         int high = n, low = 0;
         int maxlen = 0;
@@ -84,7 +79,7 @@ public:
             high = low;
         }
         
-        return max(maxlen, high);
+        return maxlen;
     }
 };
 ```
