--- a/Stack_Queue/155.min-stack.md
+++ b/Stack_Queue/155.min-stack.md
@@ -58,36 +58,39 @@ class MinStack {
 public:
     /** initialize your data structure here. */
     MinStack() {
+        
     }
     
     void push(int x) {
-        data.push_back(x);
-        if (mins.size() == 0) {
-            mins.push_back(x);
-        }
-        else {
-            int t = mins.back();
-            mins.push_back(min(t, x));
-        }
+        data.push(x);
+        if (mins.empty()) mins.push(x);
+        else mins.push(min(x, mins.top()));
     }
     
     void pop() {
-        if (data.size() > 0) {
-            data.resize(int(data.size())-1);
-            mins.resize(int(mins.size())-1);
-        }
+        if (!data.empty()) data.pop();
+        if (!mins.empty()) mins.pop();
     }
     
     int top() {
-        return data.back();
+        return !data.empty() ? data.top() : -1;
     }
     
     int getMin() {
-        return mins.back();
+        return !mins.empty() ? mins.top() : -1;
     }
-
+    
 private:
-    vector<int> data;
-    vector<int> mins;
+    stack<int> data;
+    stack<int> mins;
 };
+
+/**
+ * Your MinStack object will be instantiated and called as such:
+ * MinStack obj = new MinStack();
+ * obj.push(x);
+ * obj.pop();
+ * int param_3 = obj.top();
+ * int param_4 = obj.getMin();
+ */
 ```
