--- a/Stack_Queue/239.sliding-window-maximum.md
+++ b/Stack_Queue/239.sliding-window-maximum.md
@@ -1,4 +1,5 @@
 # 滑动窗口最大值（Sliding Window Maximum）Hard
+### [原题链接](https://leetcode-cn.com/problems/sliding-window-maximum)（[Origin](https://leetcode.com/problems/sliding-window-maximum)）
 ## 描述
 给定一个数组 nums，有一个大小为k的滑动窗口从数组的最左侧移动到数组的最右侧。你只可以看到在滑动窗口 k 内的数字。滑动窗口每次只向右移动一位。
 
