add new problem

--- a/DynamicProgramming/091.decode-ways.md
+++ b/DynamicProgramming/091.decode-ways.md
@@ -70,7 +70,7 @@ Explanation:It could be decoded as "BZ" (2 26), "VF" (22 6), or "BBF" (2 2 6).
 ### 解法
 当前字母由一个数字组成; 两个数字组成;
 
-分别检验数字合法性(>0, <=26, 首位非0)
+分别检验数字合法性(>0, <=26, 首位非0). 根据该位置是否为0进行讨论: 为0则看前一位是否构成合法; 不为0则当前位即合法, 再看前一位是否构成合法. 总之, dp[i]有几种情况: dp[i-1], dp[i-2], dp[i-1]+dp[i-2], 0. 也可分别讨论当前位是否合法以及两位是否合法.
 
 ```c++
 class Solution {
