--- a/Tree/111.minimum-depth-of-binary-tree.md
+++ b/Tree/111.minimum-depth-of-binary-tree.md
@@ -72,6 +72,20 @@ public:
 };
 ```
 
+简洁写法:
+```c++
+class Solution {
+public:
+    int minDepth(TreeNode* root) {
+        if (!root) return 0;
+        int leftDepth = minDepth(root->left);
+        int rightDepth = minDepth(root->right);
+        return (!leftDepth ? rightDepth : 
+            (!rightDepth ? leftDepth : min(leftDepth, rightDepth))) + 1;
+    }
+};
+```
+
 
 ### 解法2
 DFS过程维护一全局最小深度变量, 每当到达叶子节点时比较深度并更新.
