--- a/Greedy/045.jump-game-ii.md
+++ b/Greedy/045.jump-game-ii.md
@@ -45,31 +45,28 @@ You can assume that you can always reach the last index.
 
 ## 到达终点步数最少
 ### 解法
-将数组组织为层, 下一层是上一层能够到达的最远节点. 每次更新currLevelLen和nextLevelLen.
+贪心: 每一步可确定一个最大范围, 遍历这个范围内的可能值并更新范围边界. 也可看做BFS. 
 ```c++
 class Solution {
 public:
     int jump(vector<int>& nums) {
         int n = nums.size();
-        if (n <= 1) return 0;
-        
+        int currMax = 0;
+        int cnt = 0;
         int pos = 0;
-        int currMax = 0, nextMax = 0;
-        int level = 0;
-        while (currMax >= pos) {
-            level++;
-            
-            while (pos <= currMax) {
-                nextMax = max(nextMax, pos + nums[pos]);
+        
+        while (pos < n && currMax < n - 1) {
+            int prevMax = currMax;
+            while (pos <= prevMax) {
+                currMax = max(pos + nums[pos], currMax);
+                if (currMax >= n - 1) {
+                    break;
+                }
                 pos++;
             }
-            
-            if (nextMax >= n - 1) return level;
-            
-            currMax = nextMax;
+            cnt++;
         }
-        
-        return 0;
+            
+        return cnt;
     }
 };
-```
