add dfs bfs backtracking

--- a/DFS_BFS_Backtracking/127.word-ladder.md
+++ b/DFS_BFS_Backtracking/127.word-ladder.md
@@ -101,58 +101,49 @@ Explanation:The endWord "cog" is not in wordList, therefore no possibletransform
 
 
 
-## 找最短变换, 每次变换字符串一个单词, 且单词在词典中, 求起始到终止需要多少步/
 ### 解法
-相当于BFS, 将与当前单词只有一个字母不同的单词连接为该单词的邻居, 对图做bfs, 并每次访问完从词典中删除该词以使后面不再访问.
-- BFS使用队列, 每次出队访问一个元素, 并检查其每个位置做26个字母所有修改是否在词典中,有则加入队列并从词典去除. 每访问一个单词的所有邻居后步数加1.
-- 当访问到终止单词时返回结果. 最开始判断终止单词是否在词典中, 没有则直接返回.
+把每个单词看成图中一个节点, 如果两个单词只有一个字母不同, 则两个单词有一条边连接. 问题转化为求从起点单词到终点单词的最短路径. 
+
+方法: BFS, 依次更新没有访问过的邻点的长度. 使用数据结构为队列.
+
 ```c++
 class Solution {
 public:
     int ladderLength(string beginWord, string endWord, vector<string>& wordList) {
-        unordered_set<string> wordSet;
+        unordered_map<string, int> dist;
         for (string word : wordList) {
-            wordSet.insert(word);
+            dist[word] = 0;
         }
-        if (wordSet.find(endWord) == wordSet.end()) {
-            return 0;
+        dist[beginWord] = 1;
+        
+        if (dist.find(endWord) == dist.end()) {
+            return 0;    
         }
+
+        queue<string> q;
+        q.push(beginWord);
         
-        queue<string> toVisit;
-        addNextWords(beginWord, wordSet, toVisit);
-        
-        int dist = 2;
-        while (!toVisit.empty()) {
-            int n = toVisit.size();
-            for (int i = 0; i < n; i++) {
-                string word = toVisit.front();
-                toVisit.pop();
-                if (word == endWord) {
-                    return dist;
-                }
-                addNextWords(word, wordSet, toVisit);
-            }
-            dist++;
-        }
-        
-        return 0;
-    }
-    
-    void addNextWords(string word, unordered_set<string> &wordSet, queue<string> &toVisit) {
-        wordSet.erase(word);
-        for (int i = 0; i < word.length(); i++) {
-            char letter = word[i];
+        while (!q.empty()) {
+            string curr = q.front();
+            q.pop();
+            int d = dist[curr];
             
-            for (int j = 0; j < 26; j++) {
-                word[i] = 'a' + j;
-                if (wordSet.find(word) != wordSet.end()) {
-                    toVisit.push(word);
-                    wordSet.erase(word);
+            for (int l = 0; l < curr.length(); l++) {
+                char tmp = curr[l];
+                for (int i = 0; i < 26; i++) {
+                    char c = 'a' + i;
+                    if (tmp == c) continue;
+                    curr[l] = c;
+                    if (dist.find(curr) != dist.end() && !dist[curr]) {
+                        dist[curr] = d + 1;
+                        q.push(curr);
+                    }
                 }
+                curr[l] = tmp;
             }
-            
-            word[i] = letter;
         }
+        
+        return dist[endWord];
     }
 };
 ```
