--- a/DFS_BFS_Backtracking/130.surrounded-regions.md
+++ b/DFS_BFS_Backtracking/130.surrounded-regions.md
@@ -59,48 +59,38 @@ Surrounded regions shouldn't be on the border, which means that any 'O'on the bo
 
 ## 填充二维矩阵中被包裹的区域
 ### 解法
-反向操作, 先把处在边界的区域标记起来(visit), 即对外面一圈的点中的白点遍历. 再对中间没访问的白点填充.
+对边界点进行DFS, 如果是O则用其他字母先标记. 遍历完成后再将中间没有遍历到的O变为X并恢复边界那些变为其他字母的O. 这样可以使空间复杂度为O(1).
 ```c++
 class Solution {
 public:
     void solve(vector<vector<char>>& board) {
-        int m = board.size();
-        if (!m) return;
-        int n = board[0].size();
-        if (!n) return;
+        if (board.empty()) return;
+        int m = board.size(), n = board[0].size();
         
-        vector<int> line(n, 0);
-        vector<vector<int> > visit(m, line);
-        
-        for (int j = 0; j < n; j++) {
-            traverse(board, visit, m, n, 0, j);
-            traverse(board, visit, m, n, m-1, j);
-        }
         for (int i = 0; i < m; i++) {
-            traverse(board, visit, m, n, i, 0);
-            traverse(board, visit, m, n, i, n-1);
+            for (int j = 0; j < n; j++) {
+                if (i == 0 || i == m-1 || j == 0 || j == n-1) {
+                    dfs(board, i, j, m, n);
+                }
+            }
         }
         
-        for (int i = 1; i < m - 1; i++) {
-            for (int j = 1; j < n - 1; j++) {
-                if (!visit[i][j] && board[i][j] == 'O') {
-                    board[i][j] = 'X';
-                }
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (board[i][j] == 'A') board[i][j] = 'O';
+                else board[i][j] = 'X';
             }
         }
     }
     
-    void traverse(vector<vector<char> > &board, vector<vector<int> > &visit, int m, int n, int i, int j) {
-        if (i < 0 || i >= m || j < 0 || j >= n || visit[i][j] || board[i][j] == 'X') {
-            return;
-        }
+    void dfs(vector<vector<char>> &board, int i, int j, int m, int n) {
+        if (i < 0 || i >= m || j < 0 || j >= n || board[i][j] != 'O') return;
         
-        visit[i][j] = 1;
-        
-        traverse(board, visit, m, n, i-1, j);
-        traverse(board, visit, m, n, i+1, j);
-        traverse(board, visit, m, n, i, j-1);
-        traverse(board, visit, m, n, i, j+1);
+        board[i][j] = 'A';
+        dfs(board, i+1, j, m, n);
+        dfs(board, i-1, j, m, n);
+        dfs(board, i, j+1, m, n);
+        dfs(board, i, j-1, m, n);
     }
 };
 ```
