--- a/DynamicProgramming/053.maximum-subarray.md
+++ b/DynamicProgramming/053.maximum-subarray.md
@@ -37,25 +37,24 @@ If you have figured out the O(n) solution, try coding another solution using the
 
 ## 和最大的连续子序列
 ### 解法
-贪心, 每次与当前值比较并更新.
+DP更新公式: 
+
+    f(i) = max(f(i-1)+a[i], a[i]), res = max{f(i)}. 
+
+在遍历时比较, 更新位置不冲突, 可以用O(1)空间.
+
 ```c++
 class Solution {
 public:
     int maxSubArray(vector<int>& nums) {
-        int n = nums.size();
-        if (!n) {
-            return 0;
+        int maxSum = INT_MIN, currSum = 0;
+        
+        for (int num : nums) {
+            currSum = max(currSum + num, num);
+            maxSum = max(maxSum, currSum);
         }
         
-        int globalSum = nums[0];
-        int currSum = nums[0];
-        
-        for (int i = 1; i < n; i++) {
-            currSum = max(currSum + nums[i], nums[i]);
-            globalSum = max(currSum, globalSum);
-        }
-        
-        return globalSum;
+        return maxSum;
     }
 };
 ```
