--- a/DynamicProgramming/062.unique-paths.md
+++ b/DynamicProgramming/062.unique-paths.md
@@ -71,10 +71,14 @@ Output: 28
 
 ## 从左上角到右下角可能的路径数
 ### 解法
-动态规划: 当前位置数=上方+左方,即
-f(i,j) = f(i-1,j) + f(i,j-1)
+DP更新公式:
+    
+    f(i,j) = f(i-1,j) + f(i,j-1)
 
-用一维数组表示是 f(j) = f(j-1) + f(j)
+用一维数组表示是 
+    
+    f(j) = f(j-1) + f(j)
+    
 ```c++
 class Solution {
 public:
@@ -88,6 +92,23 @@ public:
         }
         
         return dp.back();
+    }
+};
+```
+
+
+### 解法2
+优化: 斜着看其实为杨辉三角, 每个数即为一个二项式系数, 点(m,n)的结果为C_(m+n-2)^(n-1).
+```c++
+class Solution {
+public:
+    int uniquePaths(int m, int n) {
+        long res = 1;
+        int t = min(m, n);
+        for (int i = 1; i <= t - 1; i++) {
+            res = res * (m + n - i - 1) / i;
+        }
+        return res;
     }
 };
 ```
