--- a/DynamicProgramming/064.minimum-path-sum.md
+++ b/DynamicProgramming/064.minimum-path-sum.md
@@ -16,7 +16,7 @@
 
 输出: 7
 
-解释: 因为路径 1&rarr;3&rarr;1&rarr;1&rarr;1 的总和最小。
+解释: 因为路径 1->3->1->1->1 的总和最小。
 ```
 
 ## Description
@@ -35,49 +35,45 @@ Input:
 
 Output: 7
 
-Explanation: Because the path 1&rarr;3&rarr;1&rarr;1&rarr;1 minimizes the sum.
+Explanation: Because the path 1->3->1->1->1 minimizes the sum.
 
 ```
 
 
-
-
-## 矩阵左上角到右下角的最小路径和
 ###解法
-动态规划：
-f(i,j) = min(f(i-1,j), f(i,j-1)) + a[i,j]
-f(i,0) = f(i-1,0) + a[i,0]
-f(0,j) = f(0,j-1) + a[0,j]
-f(0,0) = a[0,0]
+DP更新公式:
+
+    f(i,j) = min{f(i-1,j), f(i,j-1)} + a[i,j]
+    f(i,0) = f(i-1,0) + a[i,0]
+    f(0,j) = f(0,j-1) + a[0,j]
+    f(0,0) = a[0,0]
+
+注意到i-1行和i行没有依赖, 可以直接用O(n)空间.
+
+    循环i = 1 ... m, 对每个i:
+        f(j) = min(f(j), f(j-1)) + a[i,j]
+        f(0) += a[i,0]
+    初始时f(j) = inf, f(0) = 0
+
+
 ```c++
 class Solution {
 public:
     int minPathSum(vector<vector<int>>& grid) {
-        int m = grid.size();
-        if (!m) {
-            return 0;
-        }
-        int n = grid[0].size();
-        if (!n) {
-            return 0;
-        }
+        if (grid.empty()) return 0;
+        int m = grid.size(), n = grid[0].size();
         
-        int dp[m][n] = {0};
-        dp[0][0] = grid[0][0];
-        for (int i = 1; i < m; i++) {
-            dp[i][0] = dp[i-1][0] + grid[i][0];
-        }
-        for (int j = 1; j < n; j++) {
-            dp[0][j] = dp[0][j-1] + grid[0][j];
-        }
+        vector<int> dp(n, INT_MAX);
+        dp[0] = 0;
         
-        for (int i = 1; i < m; i++) {
+        for (int i = 0; i < m; i++) {
+            dp[0] += grid[i][0];
             for (int j = 1; j < n; j++) {
-                dp[i][j] = min(dp[i-1][j], dp[i][j-1]) + grid[i][j];
+                dp[j] = min(dp[j], dp[j-1]) + grid[i][j];
             }
         }
         
-        return dp[m-1][n-1];
+        return dp.back();
     }
 };
 ```
