--- a/DynamicProgramming/072.edit-distance.md
+++ b/DynamicProgramming/072.edit-distance.md
@@ -18,9 +18,9 @@
 输出: 3
 
 解释: 
-horse -> rorse (将 &#39;h&#39; 替换为 &#39;r&#39;)
-rorse -> rose (删除 &#39;r&#39;)
-rose -> ros (删除 &#39;e&#39;)
+horse -> rorse (将 'h' 替换为 'r')
+rorse -> rose (删除 'r')
+rose -> ros (删除 'e')
 ```
 
 
@@ -31,11 +31,11 @@ rose -> ros (删除 &#39;e&#39;)
 输出: 5
 
 解释: 
-intention -> inention (删除 &#39;t&#39;)
-inention -> enention (将 &#39;i&#39; 替换为 &#39;e&#39;)
-enention -> exention (将 &#39;n&#39; 替换为 &#39;x&#39;)
-exention -> exection (将 &#39;n&#39; 替换为 &#39;c&#39;)
-exection -> execution (插入 &#39;u&#39;)
+intention -> inention (删除 't')
+inention -> enention (将 'i' 替换为 'e')
+enention -> exention (将 'n' 替换为 'x')
+exention -> exection (将 'n' 替换为 'c')
+exection -> execution (插入 'u')
 ```
 
 ## Description
@@ -56,9 +56,9 @@ Input: word1 = "horse", word2 = "ros"
 Output: 3
 
 Explanation: 
-horse -> rorse (replace &#39;h&#39; with &#39;r&#39;)
-rorse -> rose (remove &#39;r&#39;)
-rose -> ros (remove &#39;e&#39;)
+horse -> rorse (replace 'h' with 'r')
+rorse -> rose (remove 'r')
+rose -> ros (remove 'e')
 ```
 
 
@@ -69,11 +69,11 @@ Input: word1 = "intention", word2 = "execution"
 Output: 5
 
 Explanation: 
-intention -> inention (remove &#39;t&#39;)
-inention -> enention (replace &#39;i&#39; with &#39;e&#39;)
-enention -> exention (replace &#39;n&#39; with &#39;x&#39;)
-exention -> exection (replace &#39;n&#39; with &#39;c&#39;)
-exection -> execution (insert &#39;u&#39;)
+intention -> inention (remove 't')
+inention -> enention (replace 'i' with 'e')
+enention -> exention (replace 'n' with 'x')
+exention -> exection (replace 'n' with 'c')
+exection -> execution (insert 'u')
 ```
 
 
