--- a/DynamicProgramming/085.maximal-rectangle.md
+++ b/DynamicProgramming/085.maximal-rectangle.md
@@ -44,30 +44,21 @@ Output: 6
     - 高度为0
     - 左边等于下一个位置
     - 右边等于前一个位置
+    
 ```c++
 class Solution {
 public:
     int maximalRectangle(vector<vector<char>>& matrix) {
-        int m = matrix.size();
-        if (!m) {
-            return 0;
-        }
-        int n = matrix[0].size();
-        if (!n) {
-            return 0;
-        }
+        if (matrix.empty()) return 0;
+        int m = matrix.size(), n = matrix[0].size();
         
         vector<int> left(n, 0), right(n, n), height(n, 0);
         int maxArea = 0;
         for (int i = 0; i < m; i++) {
             int curr_left = 0, curr_right = n;
             for (int j = 0; j < n; j++) {
-                if (matrix[i][j] == '1') {
-                    height[j]++;
-                }
-                else {
-                    height[j] = 0;
-                }
+                if (matrix[i][j] == '1') height[j]++;
+                else height[j] = 0;
             }
                 
             for (int j = 0; j < n; j++) {
