--- a/DynamicProgramming/120.triangle.md
+++ b/DynamicProgramming/120.triangle.md
@@ -47,7 +47,7 @@ Bonus point if you are able to do this using only O(n) extra space, where n is t
 
 ## 三角形最小路径和
 ### 解法
-动态规划, 从下往上找, 只需要开O(n), 空间, 并且遍历1次, 且不用每次保存全局最大, 因为最后一步到第1层只有1个数, 就是全局最大.
+动态规划, 从下往上找, 只需要开O(n)空间, 并且遍历1次, 且不用每次保存全局最大, 因为最后一步到第1层只有1个数, 就是全局最大.
 ```c++
 class Solution {
 public:
