--- a/DynamicProgramming/123.best-time-to-buy-and-sell-stock-iii.md
+++ b/DynamicProgramming/123.best-time-to-buy-and-sell-stock-iii.md
@@ -80,9 +80,11 @@ Explanation: In this case, no transaction is done, i.e. max profit = 0.
 
 ## 买卖股票, 最多只能有2组交易
 ### 解法
-dp: f(k,i) = max(f(k,i-1), a[i] - a[j] + f(k-1,j-1)), j = 0, ..., i-1
+f(k,i)表示第i天最多k笔(1,2)交易的最大值, 则更新公式: 
 
-即第i天最多k笔(1,2)交易的最大值, 来源于第i-1天并且第i天不交易, 或者第i天有交易,则买入来自1~i中价格最小.
+    f(k,i) = max(f(k,i-1), a[i] - a[j] + f(k-1,j-1)), j = 0, ..., i-1
+
+即来源于第i-1天并且第i天不交易, 或者第i天有交易,则买入来自1~i中价格最小.
 
 最小值min每次扫i~i, 其实大部分是重复操作, 只需按顺序在循环中执行计算.
 
