--- a/DynamicProgramming/198.house-robber.md
+++ b/DynamicProgramming/198.house-robber.md
@@ -53,7 +53,10 @@ Explanation: Rob house 1 (money = 2), rob house 3 (money = 9) and rob house 5 (m
 
 ## 数组子序列之和, 每个元素在原数组中至少间隔1位
 ### 解法
-DP: dp[i] = max(dp[i-1], num[i] + dp[i-2])
+DP: 
+
+    dp[i] = max(dp[i-1], num[i] + dp[i-2])
+    
 优化: 使用3个数
 ```c++
 class Solution {
