--- a/DynamicProgramming/221.maximal-square.md
+++ b/DynamicProgramming/221.maximal-square.md
@@ -34,7 +34,11 @@ Output: 4
 
 
 ### 解法
-DP. 记dp[i][j]为到当前位置最大的正方形边长, 则为其左/上/左上的最大边长中最小的一个+1 (如果当前位置为1的话). 即dp[i][j] = min{dp[i-1][j-1], dp[i-1][j], dp[i][j-1]} + 1
+记dp[i][j]为到当前位置最大的正方形边长, 则DP更新公式:
+    
+    dp[i][j] = min{dp[i-1][j-1], dp[i-1][j], dp[i][j-1]} + 1
+    
+即为其左/上/左上的最大边长中最小的一个+1 (如果当前位置为1的话).
 
 ```c++
 class Solution {
