--- a/DynamicProgramming/309.best-time-to-buy-and-sell-stock-with-cooldown.md
+++ b/DynamicProgramming/309.best-time-to-buy-and-sell-stock-with-cooldown.md
@@ -41,7 +41,13 @@ Explanation: transactions = [buy, sell, cooldown, buy, sell]
 
 ## 卖完必须隔一天才能买
 ### 解法
-DP: dp[i]表示第i天最大总收益, 分第i天不卖出和卖出的情况, dp[i] = max(dp[i-1], p[i] - p[j] + dp[j-2]), 0<=j<i, dp[-2]=dp[-1]=0, 即第j天买入, 上一次卖出最迟是j-2天. 最大收益即为max(dp[i]), 0<=i<n.
+DP: dp[i]表示第i天最大总收益, 分第i天不卖出和卖出的情况, 
+
+    dp[i] = max(dp[i-1], max(p[i] - p[j] + dp[j-2])), 0<=j<i, 
+    dp[-2] = dp[-1] = 0
+    
+即第j天买入, 上一次卖出最迟是j-2天. 最大收益即为max(dp[i]), 0<=i<n.
+    
 
 优化: 
 - 将式子中只关于j的部分提取出来, 则该部分可由i循环每次记录全局结果, 只需要1层循环.
