--- a/DynamicProgramming/312.burst-balloons.md
+++ b/DynamicProgramming/312.burst-balloons.md
@@ -53,9 +53,12 @@ Explanation: nums = [3,1,5,8] --> [3,5,8] -->   [3,8]   -->  [8]  --> []
 ### 解法
 DP: 记dp[i][j]为戳破i到j得到的收益, k为最后一个戳破的球, 则k将数组分成两部分, 假设都有了最大收益, 则可以递归, 且戳破k的收益是num[i-1] * num[k] * num[j+1].
 
-公式: dp[i][j] = max(dp[i][j], dp[i][k-1] + num[i-1] * num[k] * num[j+1] + dp[k+1][j])
+公式: 
+
+    dp[i][j] = max(dp[i][j], max(dp[i][k-1] + num[i-1] * num[k] * num[j+1] + dp[k+1][j]))
 
 注意i,j的循环, 应按照i到j的长度大小的顺序遍历.
+时间O(n^3)
 
 ```c++
 class Solution {
