--- a/DynamicProgramming/322.coin-change.md
+++ b/DynamicProgramming/322.coin-change.md
@@ -45,7 +45,10 @@ Output: -1
 You may assume that you have an infinite number of each kind of coin.
 
 ### 解法
-背包问题. 记dp[i]为amount为i时最小的硬币数, 则dp[i] = min(dp[i-coins[j]]) + 1, j=0,...,coins.size()-1, 且如果dp[i-coins[j]]存在的话.
+背包问题. 记dp[i]为amount为i时最小的硬币数, 则
+
+    dp[i] = min(dp[i-coins[j]]) + 1, j=0,...,coins.size()-1, 如果dp[i-coins[j]]存在的话.
+
 ```c++
 class Solution {
 public:
