--- a/DynamicProgramming/576.out-of-boundary-paths.md
+++ b/DynamicProgramming/576.out-of-boundary-paths.md
@@ -64,7 +64,11 @@ N is in range [0,50].
 
 
 ### 解法
-循环N步, 对于第k步中dp[k][x][y]表示从(i,j)到达(x,y)的方案数. 故每次遍历四个邻居, 其结果数dp[k][nx][ny] = sum(dp[k-1][x][y]) (如果(x,y)是(nx,ny)的邻居, 且(nx,ny)在边界内). 如果(nx,ny)在边界外, 则可以计入结果总数. 实际上dp可重用, 只需要两份(k-1步和k步)即可.
+循环N步, 对于第k步中dp[k][x][y]表示从(i,j)到达(x,y)的方案数. 故每次遍历四个邻居, 其结果数
+
+    dp[k][nx][ny] = sum(dp[k-1][x][y]) (如果(x,y)是(nx,ny)的邻居, 且(nx,ny)在边界内). 
+    
+如果(nx,ny)在边界外, 则可以计入结果总数. 实际上dp可重用, 只需要两份(k-1步和k步)即可.
 
 ```c++
 class Solution {
