--- a/DynamicProgramming/063.unique-paths-ii.md
+++ b/DynamicProgramming/063.unique-paths-ii.md
@@ -67,37 +67,32 @@ There are two ways to reach the bottom-right corner:
 
 ## 移动路径, 中间有障碍
 ### 解法
-同理, 如果没有障碍则数量为上方和左方的和, 如果有障碍数量为0
+DP更新公式:
+    
+    循环 i = 1 ... m:
+        f(j) = f(j) + f(j-1), if grid[i][j] = 1
+             = 0,             if grid[i][j] = 0
+    
+即如果没有障碍则数量为上方和左方的和, 如果有障碍数量为0
+
 ```c++
 class Solution {
 public:
-    int uniquePathsWithObstacles(vector<vector<int>>& obstacleGrid) {
-        int m = obstacleGrid.size();
-        if (!m) return 0;
-        int n = obstacleGrid[0].size();
-        if (!n) return 0;
+    int uniquePathsWithObstacles(vector<vector<int>>& grid) {
+        if (grid.empty()) return 0;
+        int m = grid.size(), n = grid[0].size();
         
-        vector<int> line(n, 0);
-        vector<vector<int> > dp(m, line);
+        vector<int> dp(n);
+        dp[0] = !grid[0][0];
         
-        dp[0][0] = (1 - obstacleGrid[0][0]);
-        
-        for (int i = 1; i < m; i++) {
-            dp[i][0] = dp[i-1][0] && (1 - obstacleGrid[i][0]);
-        }
-        for (int j = 1; j < n; j++) {
-            dp[0][j] = dp[0][j-1] && (1- obstacleGrid[0][j]);
-        }
-        
-        for (int i = 1; i < m; i++) {
+        for (int i = 0; i < m; i++) {
+            dp[0] *= !grid[i][0];
             for (int j = 1; j < n; j++) {
-                if (!obstacleGrid[i][j]) {
-                    dp[i][j] = dp[i-1][j] + dp[i][j-1];
-                }
+                dp[j] = (dp[j] + dp[j-1]) * !grid[i][j];
             }
         }
         
-        return dp[m-1][n-1];
+        return dp.back();
     }
 };
 ```
