--- a/DynamicProgramming/070.climbing-stairs.md
+++ b/DynamicProgramming/070.climbing-stairs.md
@@ -66,7 +66,12 @@ Explanation: There are three ways to climb to the top.
 
 ## 爬楼梯
 ### 解法
-动态规划: f(i) = f(i-1) + f(i-2), 即斐波那契数列
+DP更新公式:
+
+    f(i) = f(i-1) + f(i-2)
+
+即斐波那契数列
+
 ```c++
 class Solution {
 public:
