--- a/DynamicProgramming/139.word-break.md
+++ b/DynamicProgramming/139.word-break.md
@@ -81,35 +81,34 @@ Output: false
 
 ## 判断字符串是否可以分割为词典中的单词
 ### 解法
-DP: 遍历每个终止位置, 判断从0开始的子串是否满足, 即第j个位置满足且后面部分在词典中.
-f(0, i) = f(0, j) & (s[j,i] in dict), for one j, 0<=j<i.
+DP: f(i)表示子串s[0...i]可以拆分成字典中的词, 则更新公式:
+    
+    f(i) = f(j) & (s[j,i] in dict), for one j, 0<=j<i.
+
+即遍历每个终止位置, 判断从0开始的子串是否满足, 即第j个位置满足且后面部分在词典中.
+    
 ```c++
 class Solution {
 public:
     bool wordBreak(string s, vector<string>& wordDict) { 
         int n = s.length();
-        if (!n) {
-            return false;
-        }
+        if (!n) return false;
         
-        unordered_map<string, int> dict;
-        for (string word : wordDict) {
-            dict[word] = 0;
-        }
+        unordered_set<string> dict(wordDict.begin(), wordDict.end());
         
-        vector<bool> check(n + 1, false);
-        check[0] = true;
+        vector<bool> dp(n + 1, false);
+        dp[0] = true;
         
         for (int i = 1; i <= n; i++) {
             for (int j = 0; j < i; j++) {
-                if (check[j] && dict.find(s.substr(j, i-j)) != dict.end()) {
-                    check[i] = true;
+                if (dp[j] && dict.count(s.substr(j, i-j))) {
+                    dp[i] = true;
                     break;
                 }
             }
         }
         
-        return check[n];
+        return dp[n];
     }
 };
 ```
