--- a/DynamicProgramming/188.best-time-to-buy-and-sell-stock-iv.md
+++ b/DynamicProgramming/188.best-time-to-buy-and-sell-stock-iv.md
@@ -60,26 +60,26 @@ Explanation: Buy on day 2 (price = 2) and sell on day 3 (price = 6), profit = 6-
 
 ## 股票交易, 最多k次
 ### 解法
-- 对k约束, k <= n/2
-- dp[k,i] = max(dp[k,i-1], max(dp[k-1,j-1]+dp[i]-dp[j])), 0<=j<i.
-- 优化成一维, 时间O(kn), 空间O(n).
+- 对k约束, K <= n/2
+- dp[k,i] = max(dp[k,i-1], max(dp[k-1,j-1]+prices[i]-prices[j])), 0<=j<i.
+- 优化成一维, 时间O(Kn), 空间O(n).
 ```c++
 class Solution {
 public:
-    int maxProfit(int k, vector<int>& prices) {
+    int maxProfit(int K, vector<int>& prices) {
         int n = prices.size();
         if (!n) {
             return 0;
         }
-        k = min(k, n / 2);
+        K = min(K, n / 2);
 
-        vector<int> dp(k+1, 0);
-        vector<int> mins(k+1, prices[0]);
+        vector<int> dp(K+1, 0);
+        vector<int> mins(K+1, prices[0]);
         
         for (int i = 1; i < n; i++) {
-            for (int j = 1; j <= k; j++) {
-                mins[j] = min(mins[j], prices[i] - dp[j-1]);
-                dp[j] = max(dp[j], prices[i] - mins[j]);
+            for (int k = 1; k <= K; k++) {
+                mins[k] = min(mins[k], prices[i] - dp[k-1]);
+                dp[k] = max(dp[k], prices[i] - mins[k]);
             }
         }
         
