--- a/DynamicProgramming/300.longest-increasing-subsequence.md
+++ b/DynamicProgramming/300.longest-increasing-subsequence.md
@@ -46,7 +46,10 @@ Follow up: Could you improve it to O(n log n) time complexity?
 
 ## 数组最长连续递增子序列长度
 ### 解法1 (O(n^2))
-DP: dp[i] = max(dp[j]), 0<=j<i, if a[i]>a[j]
+DP更新公式:
+ 
+    f(i) = max{f(j)}, 0<=j<i, if a[i]>a[j]
+    
 ```c++
 class Solution {
 public:
@@ -76,31 +79,35 @@ public:
 ```
 
 ### 解法2：O(nlogn)
+s(i)表示数组a[0...i]的最长递增子序列, 则更新公式:
+
+    s(i) = s(i-1),     if a[i] <= s(i-1)[-1]
+         = s(i-1) + 1, if a[i] >  s(i-1)[-1]
+
+即维护当前的最长递增子序列, 如果当前数能够插入中间则更新(放在第一个大于该数的数的位置), 否则追加. 每一步查找是二分.
+         
 每次将当前数放到尾部数组第一个比当前数大的位置，因为往后肯定是比当前数大且下标小的数，不符合要求，往前都是小的数，且是当前最长。每步都是二分查找，一共O(nlogn)
 ```c++
 class Solution {
 public:
     int lengthOfLIS(vector<int>& nums) {
-        int n = nums.size();
-        if (!n) {
-            return 0;
-        }
-        
-        int maxLen = 1;
-        int dp[n] = {0};
-        dp[0] = 1;
-        
-        for (int i = 1; i < n; i++) {
-            for (int j = 0; j < i; j++) {
-                if (nums[i] > nums[j]) {
-                    dp[i] = max(dp[i], dp[j]);
-                }
+        vector<int> tails;
+        for (int num : nums) {
+            if (!tails.size() || num > tails.back()) {
+                tails.push_back(num);
             }
-            dp[i]++;
-            maxLen = max(maxLen, dp[i]);
+            else {
+                // binary search: first place that >= num
+                int low = 0, high = int(tails.size())-1;
+                while (low < high) {
+                    int mid = (low + high) / 2;
+                    if (tails[mid] < num) low = mid + 1;
+                    else high = mid;
+                }
+                tails[low] = num;
+            }
         }
-        
-        return maxLen;
+        return tails.size();
     }
 };
 ```
